--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p> Bonjour!<br>
 Bienvenu sur le site l'Univers du manga,je vous présenterais quelques manga.<br>
 Mais avant,une petit présentation du manga.<br>
-Un manga (漫画?) est une bande dessinée japonaise.
+Un manga (漫画) est une bande dessinée japonaise.
 
 Le mot « manga » est par ailleurs parfois utilisé pour désigner, par extension, une bande dessinée non japonaise respectant les codes des productions populaires japonaises ou pour nommer, par métonymie, d'autres produits visuels rappelant certaines de ces bandes dessinées (dessins animés, style graphique, etc.).
 
@@ -83,7 +83,7 @@ La personne réalisant des mangas est appelée mangaka.</p>
 </table>
 <h1 id="manga">Manga</h1>
 <h2>L'univers de Naruto </h2>
-	<img src="1200px-Logo_Naruto_Shippūden.svg.png" alt="naruto" width="760" height="198"/>
+	<img src="1200px-Logo_Naruto_Shippūden.svg.png" alt="naruto" width="760" height="198"/>
 	<p> Le manga Naruto se déroule dans un univers fantastique, dans lequel vivent des ninja.<br>
 	Lhistoire s'articule principalement autour de Naruto,Sasuke,Kakashi et Sakura.<br>
 	C'est quatre personnages forment l'équipe 7 dont Kakashi est le chef.<br>
