--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ La personne réalisant des mangas est appelée mangaka.</p>
 			<td><img src="naruto-to-boruto-the-live-2019.jpg" alt=""/></td><td>Boruto</td><td>Action</td><td>shonen</td><td><a href="https://www.netflix.com/be-fr/">Lien Netflix</td>
 		</tr>
 		<tr>
-			<td><img src="519K2AJNC9L._AC_SY445_.jpg" alt=""/></td><td>Hamtaro</td><td>Comedie</td><td>Kodomo</td><td>Lien Netflix</td>
+			<td><img src="519K2AJNC9L._AC_SY445_.jpg" alt=""/></td><td>Hamtaro</td><td>Comedie</td><td>Kodomo</td><td></td>
 		</tr>
 		<tr>
 			<td><img src="Dan_Machi_Movie_Arrow_of_the_Orion.jpg" alt=""/></td><td>Dan Machi</td><td>Fantastique</td><td>shonen</td><td><a href="https://www.netflix.com/be-fr/">Lien Netflix</td>
