--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@ La personne réalisant des mangas est appelée mangaka.</p>
 	Nous retrouvons aussi des créatures gigantesques dont la puissance et la force évolue en fonction du nombre de queue qu'il possède.<br>
 	Le plus puissance des créatures possède neuf queues et se nomme kyûbi.<br></p>
 	<h2>Les personnages</h2>
-	<ul><style> b{color: darkred}</style>
+	<style> b{color: darkred}</style>
 		Nous évoquerons que les personnages de l'équipe 7 et Kyûbi.<br>
+	<ul>
 		<li><b>Naruto</b> est un enfant qui a toujours vécu seul et méprisé des autres membre du village(car il est l'hote du démon renard (Kyûbi).</li><br>
 		Il rêve de devenir hokage pour être reconnu de tous et ne plus être méprisé des autres.<br>
 		Sa vie change lorsqu'il intègre l'équipe 7 pour devenir un ninja.</li><br>
