--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ La personne réalisant des mangas est appelée mangaka.</p>
 
 	<tbody>
 		<tr>
-			<td><img src="4423178.jpg" alt=""/></td><td>Naruto</td><td>Action</td><td>Shonen</td><td rowspan="2"><a href="https://www.netflix.com/be-fr/"></a>Lien Netflix</td>
+			<td><img src="4423178.jpg" alt=""/></td><td>Naruto</td><td>Action</td><td>Shonen</td><td rowspan="2"><a href="https://www.netflix.com/be-fr/">Lien Netflix</td>
 		</tr>
 		<tr>
 			<td><img src="7329.jpg" alt=""/></td><td>Fairy tail</td><td>Aventure</td><td>Shonen</td>
@@ -71,7 +71,7 @@ La personne réalisant des mangas est appelée mangaka.</p>
 			<td><img src="7329.jpg" alt=""/></td><td>Dragon ball</td><td> Art matiaux</td><td>Shonen</td><td></td>
 		</tr>
 		<tr>
-			<td><img src="naruto-to-boruto-the-live-2019.jpg" alt=""/></td><td>Boruto</td><td>Action</td><td>Shonen</td><td><a href="https://www.netflix.com/be-fr/"></a>Lien Netflix</td>
+			<td><img src="naruto-to-boruto-the-live-2019.jpg" alt=""/></td><td>Boruto</td><td>Action</td><td>Shonen</td><td><a href="https://www.netflix.com/be-fr/">Lien Netflix</td>
 		</tr>
 		<tr>
 			<td><img src="519K2AJNC9L._AC_SY445_.jpg" alt=""/></td><td>Hamtaro</td><td>Comedie</td><td>Kodomo</td><td></td>
@@ -138,11 +138,11 @@ Erza est un atout pour la guilde, mais est crainte des membres hors rang S. En e
 						<fieldset >
 							<legend >Contact</legend>
 						<label for="pseudo"> Nom* :</label>
-						<input type="texte" name="pseudo"  required=""  placeholder="votre nom" />
+						<input type="texte" name="pseudo"  required=""  placeholder=" votre nom" />
 
 						<br />
 						<label for="pseudo"> Prénom* : </label>
-						<input type="texte" name="pseudo"   required="" placeholder="votre prénom" />
+						<input type="texte" name="pseudo"   required="" placeholder=" votre prénom" />
 
 						<br />
 						<label for="pseudo"> Date de naissance* :</label>
@@ -155,7 +155,7 @@ Erza est un atout pour la guilde, mais est crainte des membres hors rang S. En e
 						<input type="tel" />
 						<br/>
 						<label for="pseudo"> Email* :</label>
-						<input type="email" required=""  placeholder="dujardin@gmail.com" />
+						<input type="email" required=""  placeholder=" dujardin@gmail.com" />
 						<br>
 						
 						
@@ -199,7 +199,7 @@ Erza est un atout pour la guilde, mais est crainte des membres hors rang S. En e
    <p>*champs obligatoires</p>
    
 </fieldset>
-					<input type="submit" value="envoyer"/>
+					<input type="submit" value=" envoyer"/>
 				</form>
 				</p>
 
