--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ La personne réalisant des mangas est appelée mangaka.</p>
 		<li><b>Kyûbi</b> est un démon renard puissant, possédant neuf queues.
 		Le jour de la naissance de Naruto kyûbi est scellé dans le corps de Naruto ce qui fait de Naruto son Hôte.</li>
 	</ul>
-	<video scr="Naruto.mp4" controls poster="Naruto.jpg" width="760" height="198">
-		
+	<video controls poster="Naruto.jpg" width="760" height="198">
+		<source src="Naruto.mp4">
 		<source src="Naruto.webm">
 		<source src="Naruto.ogv">
 	</video>
