--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@ Erza est un atout pour la guilde, mais est crainte des membres hors rang S. En e
                     <h3>Liens</h3>
                     <div id="listes_de_liens">
                     	<ul>
-                    		<li><a href="https://fr.wikipedia.org/wiki/Naruto">liens sources</a></li>
+                    		<li><a href="https://fr.wikipedia.org/wiki/Naruto">Lien source Naruto</a></li>
                     	</ul>
                     	<ul>
-                    		<li><a href="https://www.google.be/imghp?hl=fr&tab=wi&ogbl">liens images</a></li>
+                    		<li><a href="https://www.google.be/imghp?hl=fr&tab=wi&ogbl">Liens images</a></li>
                     	</ul>
                     	<ul>
-                    		<li><a href="https://fr.wikipedia.org/wiki/Fairy_Tail">liens sources</a></li>
+                    		<li><a href="https://fr.wikipedia.org/wiki/Fairy_Tail">Lien source Fairy Tail</a></li>
                     	</ul>
                     </div>
                 </div>
