--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Erza est un atout pour la guilde, mais est crainte des membres hors rang S. En e
 
 				<p>
 
-					<form id='form1' name='data' method='POST'><input type='hidden' name='form-name' value='data' >
+					<form name='contact' method='POST' data-netlify='true'>
 						<fieldset >
 							<legend >Contact</legend>
 						<label for="nom"> Nom* :</label>
