--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@ Erza est un atout pour la guilde, mais est crainte des membres hors rang S. En e
 
 						<br />
 						<label for="date"> Date de naissance* :</label>
-						<input type="date" required pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" id="date" />
-						<span class="validity"></span>
+						<input type="date" id="date" />
 						<br />
 
 						<label for="tel"> Téléphone </label>
 						<input type="tel" id="tel"/>
 						<br/>
 						<label for="email"> Email* :</label>
-						<input type="email" required=""  placeholder=" dujardin@gmail.com"  id="email"/>
+						<input type="email" required=""  placeholder=" dujardin@gmail.com"  id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"/>
+						<span class="validity"></span>
 						<br>
 						
 						
